--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-type-animation": "^3.0.1"
+    "react-type-animation": "^3.0.1",
+    "text-type-animation-effect-react": "^1.2.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
